# pyQuestionnaire

./: LICENSE  README.md  doc.xlsx  gen.py  parse.py  pyproject.toml  scan.py  scanorganizer.py
